--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -115,7 +115,7 @@
         },
         {
           "name": "details",
-          "pattern": "details/:TuNumber:",
+          "pattern": "details/:Vehicle:",
           "target": [
             "TargetDetails"
           ]
